styled the webpage and defined layout with CSS Grid

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
   <title>Frontend Mentor | Time tracking dashboard</title>
 </head>
+
 <body>
   <main>
     <div class="profile">
@@ -20,7 +21,7 @@
         <p><span>Report for</span><br>Jeremy Robson</p>        
       </div>
       <div class="profile__timeframe">
-        <p>Daily</p>
+        <p class="active">Daily</p>
         <p>Weekly</p>
         <p>Monthly</p>
       </div>
@@ -29,38 +30,50 @@
     <div class="stats">
       <div class="stats__card">
         <p><span>Work</span><span><img src="./images/icon-ellipsis.svg"></span></p>
-        <h1 class="curr-time">5hrs</h1>
-        <p class="last-time">Last Week - 36hrs</p>
+        <div>
+          <h1 class="curr-time">5hrs</h1>
+          <p class="last-time">Last Week - 36hrs</p>
+        </div>
       </div>
 
       <div class="stats__card">
         <p><span>Play</span><span><img src="./images/icon-ellipsis.svg"></span></p>
-        <h1 class="curr-time">10hrs</h1>
-        <p class="last-time">Last Week - 8hrs</p>
+        <div>
+          <h1 class="curr-time">10hrs</h1>
+          <p class="last-time">Last Week - 8hrs</p>
+        </div>
       </div>
 
       <div class="stats__card">
         <p><span>Study</span><span><img src="./images/icon-ellipsis.svg"></span></p>
-        <h1 class="curr-time">4hrs</h1>
-        <p class="last-time">Last Week - 7hrs</p>
+        <div>
+          <h1 class="curr-time">4hrs</h1>
+          <p class="last-time">Last Week - 7hrs</p>
+        </div>
       </div>
 
       <div class="stats__card">
         <p><span>Exercise</span><span><img src="./images/icon-ellipsis.svg"></span></p>
-        <h1 class="curr-time">4hrs</h1>
-        <p class="last-time">Last Week - 5hrs</p>
+        <div>
+          <h1 class="curr-time">4hrs</h1>
+          <p class="last-time">Last Week - 5hrs</p>
+        </div>
       </div>
 
       <div class="stats__card">
         <p><span>Social</span><span><img src="./images/icon-ellipsis.svg"></span></p>
-        <h1 class="curr-time">5hrs</h1>
-        <p class="last-time">Last Week - 10hrs</p>
+        <div>
+          <h1 class="curr-time">5hrs</h1>
+          <p class="last-time">Last Week - 10hrs</p>
+        </div>
       </div>
 
       <div class="stats__card">
         <p><span>Self charset</span><span><img src="./images/icon-ellipsis.svg"></span></p>
-        <h1 class="curr-time">2hrs</h1>
-        <p class="last-time">Last Week - 2hrs</p>
+        <div>
+          <h1 class="curr-time">2hrs</h1>
+          <p class="last-time">Last Week - 2hrs</p>
+        </div>
       </div>
     </div>
   </main>
