Wrote the JS to update the UI's data as we switch the timeframe

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p><span>Work</span><span><img src="./images/icon-ellipsis.svg"></span></p>
         <div>
           <h1 class="curr-time">5hrs</h1>
-          <p class="last-time">Last Week - 36hrs</p>
+          <p class="last-time">Last Day - 36hrs</p>
         </div>
       </div>
 
@@ -40,7 +40,7 @@
         <p><span>Play</span><span><img src="./images/icon-ellipsis.svg"></span></p>
         <div>
           <h1 class="curr-time">10hrs</h1>
-          <p class="last-time">Last Week - 8hrs</p>
+          <p class="last-time">Last Day - 8hrs</p>
         </div>
       </div>
 
@@ -48,7 +48,7 @@
         <p><span>Study</span><span><img src="./images/icon-ellipsis.svg"></span></p>
         <div>
           <h1 class="curr-time">4hrs</h1>
-          <p class="last-time">Last Week - 7hrs</p>
+          <p class="last-time">Last Day - 7hrs</p>
         </div>
       </div>
 
@@ -56,7 +56,7 @@
         <p><span>Exercise</span><span><img src="./images/icon-ellipsis.svg"></span></p>
         <div>
           <h1 class="curr-time">4hrs</h1>
-          <p class="last-time">Last Week - 5hrs</p>
+          <p class="last-time">Last Day - 5hrs</p>
         </div>
       </div>
 
@@ -64,7 +64,7 @@
         <p><span>Social</span><span><img src="./images/icon-ellipsis.svg"></span></p>
         <div>
           <h1 class="curr-time">5hrs</h1>
-          <p class="last-time">Last Week - 10hrs</p>
+          <p class="last-time">Last Day - 10hrs</p>
         </div>
       </div>
 
@@ -72,11 +72,12 @@
         <p><span>Self charset</span><span><img src="./images/icon-ellipsis.svg"></span></p>
         <div>
           <h1 class="curr-time">2hrs</h1>
-          <p class="last-time">Last Week - 2hrs</p>
+          <p class="last-time">Last Day - 2hrs</p>
         </div>
       </div>
     </div>
   </main>
+  <script src="./index.js"></script>
 </body>
 </html>
 
